# shine-services

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .prettierrc  Cargo.toml  Dockerfile  bash.exe.stackdump  clippy.toml  cspell.json  docker-compose.yml  docker-devenv.yml  docker-integration-test.yml  docker-test.yml  docker.yml  example_usage.rs  fly.json  fly.toml  package-lock.json  package.json  readme.md  rustfmt.toml  server_config.cloud.json  server_config.dev.json  server_config.json  server_config.prod.json  server_config.test.json  test.http
client/: Cargo.toml  examples.json  index.html  package.json  pnpm-lock.yaml  readme.md
client/android/: .gitignore  CMakeLists.txt  build.gradle  gradle.properties  settings.gradle
client/android/gradle/: libs.versions.toml
client/examples/: asset.rs  camera_follow.rs  camera_free.rs  camera_look_at.rs  camera_orbit.rs  curve.rs  input_actions.rs  input_compose.rs  input_drivers.rs  input_example.rs  input_gesture.rs  input_mouse.rs  input_multiplayer.rs  input_pointer.rs  input_process.rs  input_sources.rs  minimap.rs  minimap.rs_  move_forward.rs  pinch_zoom.rs  simple_box.rs
client/godot/: camera_3d.gd  camera_3d.gd.uid  constants.gd  constants.gd.uid  export_presets.cfg  extension_list.cfg  hello.tscn  hello.tscn9734722193.tmp  icon.svg.import  map_manager.gd  map_manager.gd.uid  project.godot  shine-client.gdextension  shine-client.gdextension.uid
client/rust/: Cargo.toml
client/rust/src/: gdextension.rs  hello.rs  lib.rs
client/src/: avatar.rs  camera.rs  controls.ts  debug_functions.rs  game.rs  lib.rs  main.rs  main.ts  mesh-builder.ts  scene.ts  world.rs
client/src/bevy_utils/: application.rs  mod.rs
client/src/camera_rig/: driver.rs  mod.rs  rig.rs
client/src/hud/: hud_camera.rs  hud_gizmo.rs  hud_plugin.rs  mod.rs
client/src/map/: ground_tile.rs  map_chunk_render.rs  map_plugin.rs  map_tile_render_query.rs  mod.rs  world_map_config.rs
client/src/poc/: camera_follow.rs  camera_free.rs  camera_look_at.rs  camera_orbit.rs  camera_pan.rs  mod.rs
client/src/sentinel/: camera.rs  debug_action.rs  debug_camera.rs  mod.rs  sentinel.rs
client/src/world/: ground_tile.rs  light.rs  map_chunk_render.rs  map_tile_render.rs  map_tile_render_query.rs  mod.rs  world_config.rs  world_plugin.rs
client/web/: .prettierignore  .prettierrc  README.md  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  viewer.html  vite-plugin-wasm-pack.ts  vite.config.ts
client/web/src/: cdt-controls.ts  cdt-index.ts  constants.ts  controls.ts  game.ts  index.ts  main.ts  mesh-builder.ts  scene.ts  vite-env.d.ts  wasm-stub.ts  wasm-types.ts  wasm.d.ts
crates/shine-core/: Cargo.toml
crates/shine-core/src/: consts.rs  event_bus.rs  lib.rs
crates/shine-core/tests/: event_bus.rs  pg_event_source.rs  pg_prepared_statements.rs  pg_query.rs  topic_bus.rs  web_config.rs
crates/shine-forge/: Cargo.toml  build.rs
crates/shine-forge/src/: lib.rs
crates/shine-forge/tests/: test_map.rs
crates/shine-game/: Cargo.toml
crates/shine-game/fuzz/: Cargo.toml  run_fuzzers.sh
crates/shine-game/src/: application.rs  lib.rs  wasm_api.rs
crates/shine-game/tests/: cdt.rs  hex_mesh.rs  hex_mesh_svg.rs  jackknife_test.rs  map2.rs  map2_server_state.rs  quad_mesh.rs  quad_mesh.rs_  quad_mesh_validation.rs  test_chunk.rs  test_map.rs  tile_map.rs  tile_map.rs_  tri_constraint.rs  tri_delaunay.rs  tri_points.rs  tri_regression.rs  triangulation.rs  triangulation_delaunay.rs
crates/shine-game/tests_/: map2_server_state.rs_  test_chunk.rs
crates/shine-infra/: Cargo.toml
crates/shine-infra/src/: crypto_utils.rs  data_protection.rs  language.rs  lib.rs
crates/shine-infra/tests/: event_bus.rs  pg_event_source.rs  pg_listener.rs  pg_prepared_statements.rs  pg_query.rs  redis_listener.rs  topic_bus.rs  web_config.rs
crates/shine-test/: Cargo.toml
crates/shine-test/src/: lib.rs
service/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  docker.yml  fly.toml  server_config.dev.json  server_config.json  server_config.prod.json  server_config.test.json
service/sql_migrations/: V11__login_token_site_info.sql  V12__login_token_check_constraint.sql  V6__login_tokens.sql
service/src/: app_config.rs  main.rs
service/src/auth/: auth_service.rs  auth_service_external_auth.rs  auth_service_page_utils.rs  auth_service_utils.rs  auth_session.rs  ep_create_token.rs  ep_external_link.rs  ep_get_active_sessions.rs  ep_get_active_tokens.rs  ep_get_auth_providers.rs  ep_get_user_info.rs  ep_provider_list.rs  ep_session_list.rs  ep_token.rs  ep_user_info_get.rs  mod.rs  page_delete_user.rs  page_logout.rs  page_validate.rs
service/src/controllers/: app_state.rs  mod.rs  openapi.rs  problems.rs  schemas.rs
service/src/core/: mod.rs
service/src/db/: db_config.rs  db_error.rs  db_pool.rs  identity_error.rs  identity_external_link.rs  identity_identities.rs  identity_manager.rs  identity_roles.rs  identity_search.rs  identity_tokens.rs  identity_uow.rs  mod.rs  name_generator.rs  session_manager.rs  session_manager_test.rs  site_info.rs
service/src/identity/: ep_configure.rs  ep_generate_user_name.rs  ep_health.rs  ep_search_identity.rs  ep_user_roles.rs  identity_service.rs  identity_service_session.rs  mod.rs
service/src/repositories/: auto_name_manager.rs  captcha_validator.rs  db.rs  mod.rs  session_manager.rs  session_manager_test.rs  site_info.rs
service/src/services/: create_user_service.rs  ep_configure.rs  ep_generate_user_name.rs  ep_health.rs  ep_search_identity.rs  ep_user_roles.rs  mod.rs  (+8 more)
service/tera_templates/: ooops.html  redirect.html
services/builder/: Cargo.toml  server_config.prod.json  server_config.test.json
services/command/: Cargo.toml  server_config.dev.json  server_config.local.json  server_config.prod.json  server_config.test.json
services/identity/: Cargo.toml  run_identity_local.ps1  run_identity_local.sh  server_config.dev.json  server_config.json  server_config.local.json  server_config.prod.json  server_config.test.json
(+1764 files in other folders)
