[workspace]
resolver = "2"

members = [
	"crates/shine-test-macros",
	"crates/shine-test",
	"crates/shine-core",
	"crates/shine-forge",
	"crates/shine-game",
	"crates/shine-infra-macros",
	"crates/shine-infra",
	"services/identity",
	"services/builder",
	"client",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
log = "0.4"
env_logger = "0.11"
color-backtrace = "0.7"
thiserror = "2.0"
anyhow = "1.0"
config = "0.15"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
lz4_flex = "0.11"

time = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.14", features = ["v4", "serde"] }
url = "2.3"
base64 = "0.22"
hex = "0.4"
serde_urlencoded = "0.7"
bytes = "1.10"
ring = "0.17"
rand = "0.9"
getrandom = "0.3"
noise = "0.9"
bcrypt = "0.17"
regex = "1.11"
fixedbitset = "0.5"
harsh = "0.2"
primal-check = "0.3"

itertools = "0.14"
smallbox = "0.8"

############################# RUNTIME #############################
pin-project = "1.1"
futures = "0.3"
futures-channel = "0.3"
async-trait = "0.1"
tokio = { version = "1.46" }
blocking = { version = "1.6" }

############################# TRACING #############################
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = "0.3"

############################# DB #############################
bb8 = "0.9"
bb8-redis = "0.24"
redis = { version = "0.32", features = ["tokio-comp", "tokio-rustls-comp"] }
bb8-postgres = "0.9"
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.13"
postgres-from-row = "0.5"
refinery = { version = "0.8", features = ["tokio-postgres"] }

############################# AZURE #############################
azure_core = { version = "0.28" }
azure_identity = { version = "0.28" }
azure_security_keyvault_secrets = { version = "0.7" }

############################# NET #############################
rustls = "0.23"
tokio-rustls = "0.26"
reqwest = { version = "0.12", features = ["json"] }
ureq = { version = "3.1", default-features = false }

############################# WEB #############################
tower = "0.5"
tower-http = "0.6"
axum = "0.8"
axum-extra = { version = "0.10" }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tera = "1.20"
validator = { version = "0.20", features = ["derive"] }
utoipa = { version = "5.3", features = [
	"axum_extras",
	"uuid",
	"chrono",
	"debug",
] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

############################# GAME ENGINE #############################
bevy = { version = "0.17", default-features = false }
bevy_dev_tools = "0.17"
bevy_mod_debugdump = "0.14"
bevy-inspector-egui = { git = "https://github.com/jakobhellermann/bevy-inspector-egui", branch = "main" }

############################# WASM #############################
wasm-logger = "0.2"
js-sys = "0.3"
web-sys = "0.3"
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"

############################# MEMBERS #############################

shine-test-macros = { path = "./crates/shine-test-macros" }
shine-test = { path = "./crates/shine-test" }
shine-core = { path = "./crates/shine-core" }
shine-infra-macros = { path = "./crates/shine-infra-macros" }
shine-infra = { path = "./crates/shine-infra" }
shine-forge = { path = "./crates/shine-forge" }
shine-game = { path = "./crates/shine-game" }

[profile.release-lto]
inherits = "release"
strip = "debuginfo"
panic = "abort"
opt-level = 'z'
lto = true
codegen-units = 1
