[workspace]
resolver = "2"

members = [
	"crates/shine-test-macros",
	"crates/shine-test",
	"crates/shine-core",
	"crates/shine-infra-macros",
	"crates/shine-infra",
	"crates/shine-game",
	"services/identity",
	"services/builder",
]

exclude = [
	"crates/shine-game/fuzz",
]

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
log = "0.4"
env_logger = "0.11"
color-backtrace = "0.7"
thiserror = "2.0"
anyhow = "1.0"
config = "0.15"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
lz4_flex = "0.13"

time = "0.3"
chrono = { version = "0.4", features = ["serde"] }
iso8601-duration = "0.2"
uuid = { version = "1.22", features = ["v4", "serde"] }
url = { version = "2.5", features = ["serde"] }
base64 = "0.22"
hex = "0.4"
serde_urlencoded = "0.7"
bytes = "1.11"
ring = "0.17"
rand = "0.10"
getrandom = "0.4"
noise = "0.9"
bcrypt = "0.19"
regex = "1.12"
fixedbitset = "0.5"
harsh = "0.2"
primal-check = "0.3"

glam = { version = "0.33", features = ["serde"] }
itertools = "0.15"
smallbox = "0.8"

############################# PROC MACRO #############################
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

############################# RUNTIME #############################
pin-project = "1.1"
futures = "0.3"
futures-channel = "0.3"
async-trait = "0.1"
tokio = { version = "1.50" }
blocking = { version = "1.6" }

############################# TRACING #############################
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", default-features = false }

############################# DB #############################
bb8 = "0.9"
bb8-redis = "0.26"
redis = { version = "1.0", features = ["tokio-comp", "tokio-rustls-comp"] }
bb8-postgres = "0.9"
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.14"
postgres-from-row = "0.5"
refinery = { version = "0.9", features = ["tokio-postgres"] }

############################# AZURE #############################
azure_core = { version = "1.1" }
azure_identity = { version = "1.0" }
azure_security_keyvault_secrets = { version = "1.0" }

############################# NET #############################
rustls = "0.23"
tokio-rustls = "0.26"
reqwest = { version = "0.13", features = ["form", "json"] }
ureq = { version = "3.2", default-features = false }

############################# WEB #############################
tower = "0.5"
tower-http = "0.7"
axum = "0.8"
axum-extra = { version = "0.12" }
axum-server = { version = "0.8", features = ["tls-rustls"] }
tera = { version = "2.0", features = ["glob_fs"] }
validator = { version = "0.20", features = ["derive"] }
utoipa = { version = "5.4", features = [
	"axum_extras",
	"uuid",
	"chrono",
	"debug",
	"url",
] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

############################# WASM #############################
tracing-web = "0.1"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = "0.3"
# fixed version to be consistent with the installed wasm-bindgen-cli version
wasm-bindgen = "=0.2.114"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"

############################# MEMBERS #############################

shine-test-macros = { path = "./crates/shine-test-macros" }
shine-test = { path = "./crates/shine-test" }
shine-core = { path = "./crates/shine-core" }
shine-infra-macros = { path = "./crates/shine-infra-macros" }
shine-infra = { path = "./crates/shine-infra" }
shine-game = { path = "./crates/shine-game" }

[profile.release-lto]
inherits = "release"
strip = "debuginfo"
panic = "abort"
opt-level = 'z'
lto = true
codegen-units = 1
