[package]
name = "shine-client"
version.workspace = true
edition.workspace = true

[features]
default = ["inspector"]

inspector = ["bevy-inspector-egui"]

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

uuid = { workspace = true }
itertools = { workspace = true }

bevy = { workspace = true, default-features = true, features = [
    "bevy_dev_tools",
] }
bevy-inspector-egui = { version = "0.32", optional = true }

shine-forge = { workspace = true }
shine-game = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { workspace = true, features = ["webgl2"] }
wasm-bindgen = { workspace = true }
