[package]
name = "shine-client"
version.workspace = true
edition.workspace = true

[features]

# features to add examples as exported library functions instead of standalone binaries for mobile platforms
example = []
examples_curve = ["example"]

[[bin]]
name = "shine_client"
path = "src/main.rs"

[lib]
name = "shine"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

uuid = { workspace = true }
itertools = { workspace = true }

bevy = { workspace = true, default-features = true, features = [
    "bevy_dev_tools",
] }
bevy-inspector-egui = { workspace = true }


shine-forge = { workspace = true }
shine-game = { workspace = true }
shine-core = { workspace = true }

[dev-dependencies]
shine-test = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { workspace = true, features = ["webgl2"] }
wasm-bindgen = { workspace = true }
getrandom = { workspace = true, features = ["wasm_js"] }
