[package]
name = "shine-client"
version.workspace = true
edition.workspace = true

[features]

# features to add examples as exported library functions instead of standalone binaries for mobile platforms
example = []
example_curve = ["example"]
example_camera_orbit = ["example"]
example_camera_follow = ["example"]
example_camera_free = ["example"]
example_camera_look_at = ["example"]
example_input_drivers = ["example"]
example_input_process = ["example"]
example_input_gesture = ["example"]
example_input_multiplayer = ["example"]
example_pinch_zoom = ["example"]
example_asset = ["example"]

[[bin]]
name = "shine_client"
path = "src/main.rs"

[lib]
name = "shine"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

uuid = { workspace = true }
itertools = { workspace = true }

bevy = { workspace = true, default-features = true, features = [
    "bevy_dev_tools",
] }
bevy-inspector-egui = { workspace = true }


shine-forge = { workspace = true }
shine-game = { workspace = true }
shine-core = { workspace = true }

[dev-dependencies]
shine-test = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { workspace = true, features = ["webgl2"] }
wasm-bindgen = { workspace = true }
getrandom = { workspace = true, features = ["wasm_js"] }
