[package]
name = "shine-identity"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
thiserror = "2.0"
anyhow = "1.0"
config = "0.13"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

time = "0.3"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
uuid = { version = "1.11", features = ["v4", "serde"] }
base64 = "0.22"
bytes = "1.0"
rand = "0.8"
hex = "0.4"
ring = "0.17"
bcrypt = "0.15"
harsh = "0.2"
regex = "1.10"

futures = "0.3"
async-trait = "0.1"
async-once-cell = "0.5"
tokio = {version = "1.41", features = ["macros", "rt-multi-thread", "signal"] }

bb8 = "0.8"
oauth2 = "5.0.0-rc.1"
openidconnect = "4.0.0-rc.1"
reqwest = { version = "0.12", features = ["json"] }

bb8-postgres = "0.8"
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "runtime"] }
tokio-rustls = "0.26"
tokio-postgres-rustls = "0.13"
postgres-from-row = "0.5"
refinery = { version = "0.8", features = ["tokio-postgres"] }

bb8-redis = "0.17"
redis = { version = "0.27.0", features = ["tokio-comp", "tokio-rustls-comp"] }

azure_core = { version = "0.21" }
azure_identity = { version = "0.21" }

validator = { version = "0.19", features = ["derive"] }
tera = "1.20"

tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
axum = "0.7"
rustls = { version = "0.23", features = ["ring"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
axum-extra = { version = "0.9", features = ["cookie", "cookie-signed", "cookie-private", "typed-header"] }

utoipa = { version = "5.2", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum"] }

shine-service = { path = "./shine-service-rs/shine-service", version = "0.1.0" }

[dev-dependencies]
shine-test = { path = "./shine-service-rs/shine-test", version = "0.1.0" }