[package]
name = "shine-client"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

uuid = { workspace = true }

godot = { version = "0.3", features = ["api-4-4"] }
bevy = { workspace = true }

shine-game = { workspace = true }
shine-core = { workspace = true }

[dev-dependencies]
shine-test = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
godot = { version = "0.3", features = ["experimental-wasm"] }
