[package]
name = "shine-core"
version.workspace = true
edition.workspace = true

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

time = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
regex = { workspace = true }
harsh = { workspace = true }
primal-check = { workspace = true }

############################# RUNTIME #############################
pin-project = { workspace = true }
futures = { workspace = true }
futures-channel = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync"] }

[dev-dependencies]
shine-test = { workspace = true }

################## wasm dependencies ##################
[target.'cfg(target_family = "wasm")'.dependencies]
uuid = { workspace = true, features = ["js"] }

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }
