[package]
name = "shine-forge"
version.workspace = true
edition.workspace = true

[dependencies]
log = { workspace = true }
thiserror = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
itertools = { workspace = true }

tokio = { workspace = true }
bevy = { workspace = true, features = [
    "std",
    "async_executor",
    "track_location",
    "bevy_log",
    "bevy_state",
]  }

shine-infra = { workspace = true, optional = true }

[dev-dependencies]
shine-test = { workspace = true }

################# native dependencies #################
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }

################## wasm dependencies ##################
[target.'cfg(target_arch = "wasm32")'.dependencies]

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }
