[package]
name = "shine-forge"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
itertools = { workspace = true }
smallbox = { workspace = true }
fixedbitset = { workspace = true }
rmp-serde = { workspace = true }
lz4_flex = { workspace = true }

tokio = { workspace = true, features = ["rt"] }
bevy = { workspace = true, features = [
    "std",
    "async_executor",
    "track_location",
    "bevy_log",
    "bevy_state",
] }

shine-core = { workspace = true }
shine-infra = { workspace = true, optional = true }

[dev-dependencies]
shine-test = { workspace = true }

################# native dependencies #################
[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos", target_os = "android"))'.dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }

################## wasm dependencies ##################
[target.'cfg(target_family = "wasm")'.dependencies]

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }
