[package]
name = "shine-game"
version.workspace = true
edition.workspace = true

[features]
default = ["dev_tools"]

dev_tools = ["bevy_mod_debugdump", "bevy_dev_tools"]

[dependencies]
thiserror = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
noise = { workspace = true }
itertools = { workspace = true }
smallbox = { workspace = true }

tokio = { workspace = true, features = ["rt", "sync"] }

bevy = { workspace = true, features = [
    "bevy_log",
    "bevy_state",
    "bevy_window",
    "bevy_core_pipeline",
    "bevy_ui",
    "bevy_gizmos",

    "ktx2",
    "jpeg",
    "png",
    "webp",
    "exr",
] }
bevy_dev_tools = { workspace = true, optional = true }
bevy_mod_debugdump = { workspace = true, optional = true }

shine-core = { workspace = true }
shine-infra = { workspace = true, optional = true }

[dev-dependencies]
shine-test = { workspace = true }

################# native dependencies #################
[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos", target_os = "android"))'.dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
ureq = { workspace = true, features = ["rustls"] }
blocking = { workspace = true }

################## wasm dependencies ##################
[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }

js-sys = { workspace = true }
web-sys = { workspace = true, features = [
    "Window",
    "Response",
    "WorkerGlobalScope",
] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

bevy = { workspace = true, features = ["webgl2"] }

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }
