[package]
name = "shine-game"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
glam = { workspace = true }
itertools = { workspace = true }

shine-core = { workspace = true }

################## wasm dependencies ##################
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }

js-sys = { workspace = true }
web-sys = { workspace = true, features = [
	"Window",
	"Response",
	"WorkerGlobalScope",
] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[dev-dependencies]
shine-test = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }
