[package]
name = "shine-game"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
glam = { workspace = true }
itertools = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }

shine-core = { workspace = true }

################## wasm dependencies ##################
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-logger = { workspace = true }
console_error_panic_hook = { workspace = true }
getrandom = { workspace = true, features = ["wasm_js"] }

js-sys = { workspace = true }
web-sys = { workspace = true, features = [
	"Window",
	"Response",
	"WorkerGlobalScope",
] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[dev-dependencies]
shine-test = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }
