[package]
name = "shine-test"
version.workspace = true
edition.workspace = true

[dependencies]
log = { workspace = true }

shine-test-macros = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { workspace = true }
color-backtrace = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-logger = { workspace = true }
wasm-bindgen-test = { workspace = true }

shine-test-macros = { workspace = true, features = ["wasm"] }
