[package]
name = "shine-test"
version.workspace = true
edition.workspace = true

[dependencies]
log = { workspace = true }

tracing-subscriber = { workspace = true, features = [
    "env-filter",
    "tracing-log",
] }

shine-test-macros = { workspace = true }

################# native dependencies #################
[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos", target_os = "android"))'.dependencies]
tokio = { workspace = true, features = ["macros"] }

################## wasm dependencies ##################
[target.'cfg(target_family = "wasm")'.dependencies]
wasm-logger = { workspace = true }
wasm-bindgen-test = { workspace = true }

shine-test-macros = { workspace = true, features = ["wasm"] }
