[package]
name = "shine-test"
version.workspace = true
edition.workspace = true

[dependencies]
log = { workspace = true }

tracing-subscriber = { workspace = true, features = [
    "std",
    "registry",
    "env-filter",
    "fmt",
    "ansi",
    "tracing-log",
] }

shine-test-macros = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-logger = { workspace = true }
wasm-bindgen-test = { workspace = true }

shine-test-macros = { workspace = true, features = ["wasm"] }
